# document-assistant

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  aaa_en_US.properties  aaa_ru.properties  docker-compose.yaml  prompt_info.py  pyproject.toml  requirements.txt  retrieval_constants.py  retrieval_qa.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml
app/: app_config.json  chat_app.py
app/.../: chroma.sqlite3
app/assets/: style.css
app/color_schemes/: blue-color-scheme.css  dark-color-scheme.css  turquoise-color-scheme.css
config/: defaults.yaml
docs/: architecture.md
docs/adr/: 0001-fastapi-and-rest-api.md  0002-hybrid-search.md  0003-pluggable-vector-store.md  0004-query-pipeline.md  0005-chunking-strategies.md
embeddings/: document_loader.py  embedding_database.py  embeddings_constants.py  file_watcher.py  test.py
embeddings/unstructured/: base_file_converter.py  csv_converter.py  document_splitter.py  excel_converter.py  file_loader_query.py  file_type.py  generic_converter.py  html_converter.py  java_converter.py  js_converter.py  json_converter.py  markdown_converter.py  pdf_converter.py  python_converter.py  rtf_converter.py  xml_converter.py
eval/: README.md  baseline_dataset.json  baseline_results.json  run_eval.py  thresholds.yaml
models/: awq_lm.py  gguf_lm.py  gptq_lm.py  model_info.py  models_constants.py  pretrained_lm.py
notebooks/: CreateEmbeddingsVectorstore.ipynb
prompts/: chunk_context.yaml  flashcards.yaml  glossary.yaml  hyde.yaml  qa.yaml  query_decomposition.yaml  summarize.yaml  verification.yaml
specs/admin-console/: plan.md  spec.md
specs/cycle4-security-packaging/: plan.md
src/api/: deps.py  main.py  schemas.py
src/api/middleware/: auth.py  ratelimit.py  telemetry.py  upload.py
src/api/routes/: admin.py  chat.py  ingest.py  status.py  study.py
src/config/: settings.py
src/rag/: bm25_index.py  chroma_backend.py  chunking.py  context_firewall.py  contextual.py  embeddings.py  fusion.py  generation.py  late_chunking.py  orchestrator.py  qdrant_backend.py  query_transform.py  reranking.py  retrieval.py  sparse.py  study_outputs.py  vectorstore.py  verification.py
src/utils/: alerting.py  jobs.py  metrics.py  report_store.py
static/: admin.html  index.html
tests/: conftest.py  test_admin_chunks_sources.py  test_alerting.py  test_api.py  test_api_validation.py  test_bm25_index.py  test_chat_sources.py  test_chroma_crud.py  test_chunking.py  test_context_budget.py  test_context_firewall.py  test_contextual.py  test_contextual_ingest.py  test_document_processing.py  test_embedding_database.py  test_eval_smoke.py  test_fusion.py  test_ingest_metadata.py  test_jobs.py  test_late_chunking.py  test_metrics.py  test_orchestrator.py  test_prompt_info.py  test_qdrant_backend.py  test_query_transform.py  test_rag_interfaces.py  test_ratelimit.py  test_report_store.py  test_reranking.py  test_retrieval_qa.py  test_settings.py  test_sparse.py  test_study_api.py  test_verification.py
tests/e2e/: conftest.py  test_admin_ui.py  test_api_health.py  test_chat_ui.py
tests/fixtures/legacy_chroma_0_5/: chroma.sqlite3
utils/: merge.py  test.py
