[tool.poetry]
package-mode = false
name = "document-assistant"
version = "0.1.0"
description = "Local-first private RAG application for document Q&A"
authors = ["EGOGE <https://github.com/gosha70>"]
license = "CC-BY-SA-4.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.3.0"
langchain-community = "^0.3.0"
langchain-core = "^0.3.0"
langchain-openai = "^0.3.0"
langchain-text-splitters = "^0.3.0"
langchain-chroma = "^0.2.0"
langchain-huggingface = "^0.1.0"
fastapi = "^0.115.0"
python-multipart = ">=0.0.9"
uvicorn = {version = "^0.34.0", extras = ["standard"]}
httpx = "^0.28.0"
pyyaml = "^6.0"
openai = "^2.29.0"
bs4 = "0.0.2"
python-dotenv = "^1.0.0"
colorama = "^0.4.6"
tqdm = "^4.66.4"
tiktoken = ">=0.8.0"
torch = ">=2.2.2"
dash = "^2.17"
dash-bootstrap-components = "^1.6"
watchdog = "^6.0"
transformers = "^4.40"
huggingface-hub = "^0.24"
sentence-transformers = "^3.0"
InstructorEmbedding = "^1.0"
pypdf = "^4.2"
psutil = "^5.9"
qdrant-client = "^1.12"
rank-bm25 = "^0.2"

[tool.poetry.group.legacy.dependencies]
llama-cpp-python = "^0.3.0"
faiss-cpu = "^1.8.0"
torchvision = ">=0.17.2"
torchaudio = ">=2.2.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-asyncio = "^0.24"
pytest-cov = "^5.0"
ruff = "^0.4"
mypy = "^1.19.1"
types-pyyaml = "^6.0.12.20250915"
bandit = {version = "^1.7", extras = ["toml"]}

[tool.poetry.group.eval.dependencies]
ragas = "^0.4"
deepeval = "*"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    "default::DeprecationWarning",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
follow_imports = "skip"
explicit_package_bases = true
exclude = ["src/rag/qdrant_backend\\.py", "src/rag/bm25_index\\.py"]

[tool.bandit]
exclude_dirs = ["tests", ".venv"]
skips = ["B101", "B110"]  # B101: assert via pytest; B110: intentional except/pass fallback patterns

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
